Fixed desktop alignment, added responsive features, enabled form submission integrated in netlify

--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,21 @@ font-family: 'Helvetica 55 Roman', sans-serif;
 font-family: 'Helvetica 65 Medium', sans-serif;
 */
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?2ftvbw');
-  src:  url('../fonts/icomoon.eot?2ftvbw#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?2ftvbw') format('truetype'),
-    url('../fonts/icomoon.woff?2ftvbw') format('woff'),
-    url('../fonts/icomoon.svg?2ftvbw#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("../fonts/icomoon.eot?2ftvbw");
+  src: url("../fonts/icomoon.eot?2ftvbw#iefix") format("embedded-opentype"),
+    url("../fonts/icomoon.ttf?2ftvbw") format("truetype"),
+    url("../fonts/icomoon.woff?2ftvbw") format("woff"),
+    url("../fonts/icomoon.svg?2ftvbw#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -45,15 +46,15 @@ font-family: 'Helvetica 65 Medium', sans-serif;
   --body-weight: 400;
   --header-shadow: linear-gradient(
     180deg,
-    rgb(242, 240, 235) 0%,
+    rgba(0, 0, 0, 0.81) 0%,
     rgba(15, 15, 15, 0.71) 50%,
-    rgba(84, 84, 84, 0.26) 100%
+    rgba(84, 84, 84, 0.07044824765843838) 100%
   );
   --header-text-color: #f2f0eb;
   --header-hover: #e9d293;
   --bg-color: #f2f0eb;
   --black-color: #707070;
-  --gray-color: #DDDDDD;
+  --gray-color: #dddddd;
   --box-shadow: 12px 9px 50px 0px rgba(0, 0, 0, 0.27);
 }
 
@@ -72,7 +73,7 @@ h1 {
   right: 0;
 }
 #nav-bar {
-  background: none !important;
+  background-image: var(--header-shadow);
   font-size: 30px;
 }
 .navbar-brand {
@@ -143,7 +144,7 @@ h1 {
   width: 100px;
   height: 100px;
 }
-#donativos-container{
+#donativos-container {
   background-color: var(--gray-color);
   height: 600px;
 }
@@ -158,7 +159,7 @@ h1 {
   -moz-box-shadow: 12px 9px 50px 0px rgba(0, 0, 0, 0.27);
   box-shadow: 12px 9px 50px 0px rgba(0, 0, 0, 0.27);
 }
-#contacto{
+#contacto {
   background-color: black;
   color: white;
 }
@@ -169,18 +170,17 @@ h1 {
 #form-container label {
   font-size: 20px;
 }
-footer{
+footer {
   background-color: var(--gray-color);
-  color: #9F9F9F;
+  color: #9f9f9f;
   font-size: 40px;
-  height: 200px;
+  height: 100px;
 }
-#fb_logo{
+#fb_logo {
   margin-right: 70px;
   color: #4267b2;
   /* display: inline-block; */
 }
-
 
 @media screen and (max-width: 800px) {
   .navbar-brand {
@@ -193,7 +193,45 @@ footer{
     font-size: 50px;
   }
   .carousel-control-next-icon,
-.carousel-control-prev-icon {
-  width: 30px;
-  height: 30px;
+  .carousel-control-prev-icon {
+    width: 30px;
+    height: 30px;
+  }
+
+  .section {
+    font-size: 16px;
+  }
+  .section h1 {
+    font-size: 3em;
+  }
+  .section p {
+    font-size: 2em;
+  }
+  footer {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section {
+    font-size: 12px;
+  }
+  footer {
+    font-size: 16px;
+  }
+  #form-container {
+    width: 100%;
+  }
+  #donativos-container {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  footer {
+    font-size: 14px;
+  }
+  #fb_logo {
+    margin-right: 10px;
+    font-size: 2em;
+  }
 }
